--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,3 @@
 $bg: #C2B8B7;
-
-$breakpoint-xs: 320px;
-$breakpoint-small: 480px;
-$breakpoint-medium: 600px;
-$breakpoint-large: 1024px;
+$primario: nth($fontcolor, 1);
+$secundario: nth($fontcolor, 2);
