--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.mainProductos #archivoProductos #archivoImagen, .mainEmpresa #imagenEmpresa, .mainSucursales .mapaSucursales {
+  border-radius: 10px;
+  border: 2px solid black; }
+
 /* reset */
 * {
   margin: 0;
@@ -82,8 +86,7 @@ header {
   margin-left: 10%;
   margin-right: 10%; }
   .mainProductos #archivoProductos #archivoImagen {
-    height: 200px;
-    border-radius: 20px; }
+    height: 200px; }
   .mainProductos #textoProductos {
     width: 70%;
     font-family: 'Roboto', sans-serif;
@@ -104,7 +107,6 @@ header {
   margin-bottom: 50px; }
   .mainEmpresa #imagenEmpresa {
     height: 300px;
-    border-radius: 10px;
     margin-right: 30px; }
   .mainEmpresa .containerEmpresa {
     display: flex;
