--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -38,6 +38,7 @@
         #imagenMarcas{
             width: 100%;
             border-radius: 10px;
+            @extend %border-img;
         }
     }
 }
