--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -8,8 +8,7 @@
     margin-left: 1%;
     margin-right: 1%;
     .agrandar:hover{
-        transform: scale(1.1);
-        transition: 0.5s;
+        @include hover(scale(1.1), 0.5s)
     }
 }
 
