--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -17,29 +17,19 @@
 /* main productos */
 .mainProductos{
     grid-area: mainProductos;
+    width: 100%;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    margin-left: 10%;
-    margin-right: 10%;
-    #archivoProductos{
-        #archivoImagen{
-            height: 200px;
-            @extend %border-img;
-        }
+    flex-direction: column;
+    align-items: center;
+    .card-productos{
+      background-color: $bg;
+      border: $primario 2px solid;
+      margin: 10px;
+      width: 60%;
     }
-    #textoProductos{
-        width: 70%;
-        font-family: 'Roboto', sans-serif;
-        color: $primario;
-    }
-    #marcasProductos{
-        margin-top: 130px;
-        #imagenMarcas{
-            width: 100%;
-            border-radius: 10px;
-            @extend %border-img;
-        }
+    .tittle-productos{
+      font-size: 1.3em;
+      font-weight: bold;
     }
 }
 /* main empresa */
