--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -28,8 +28,12 @@
       width: 60%;
     }
     .tittle-productos{
-      font-size: 1.3em;
+      font-size: 1.2em;
       font-weight: bold;
+      font-family: 'Roboto', sans-serif;
+    }
+    .text-productos{
+      font-family: 'Roboto', sans-serif;
     }
 }
 /* main empresa */
