--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,11 @@ header {
     margin: 10px;
     width: 60%; }
   .mainProductos .tittle-productos {
-    font-size: 1.3em;
-    font-weight: bold; }
+    font-size: 1.2em;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif; }
+  .mainProductos .text-productos {
+    font-family: 'Roboto', sans-serif; }
 
 /* main empresa */
 .mainEmpresa {
@@ -304,167 +307,52 @@ footer {
       color: whitesmoke;
       font-family: 'Roboto', sans-serif; }
 
-/*            MEDIAQUERIES TABLET            */
-@media screen and (max-width: 1024px) and (min-width: 600px) {
+/* MEDIAQUERIES CELULAR */
+@media screen and (min-width: 480px) and (max-width: 600px) {
+  /* header */
   header .logo {
-    height: 130px; }
-  /* Main Productos */
-  .mainProductos {
-    justify-content: center;
+    height: 100px; }
+  /* main empresa */
+  .mainEmpresa {
     flex-direction: column;
-    margin: 20px 0px 20px 0px;
-    height: auto; }
-  #archivoProductos {
-    margin: 30px 0px 0px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 150px; }
-  #textoProductos {
-    margin: 50px 0px 5px 0px;
-    width: 70%;
-    align-self: center; }
-  #imagenProductos {
-    margin: 0px 0px 0px 0px;
-    height: 150px;
-    width: 300px;
-    align-self: center; }
-  #preciosProductos {
-    margin: 0px 0px 0px 0px;
-    height: 120px; }
-  #marcasProductos {
-    margin: 0px 0px 0px 0px;
-    width: 60%;
-    height: 200px;
-    align-self: center; }
-  /* Main Empresa */
-  #mainEmpresa {
-    flex-direction: column-reverse; }
-  #imagenEmpresa {
-    margin: 0px;
-    width: 70%;
-    align-self: center;
-    border-radius: 10px; }
-  .containerEmpresa {
-    margin: 30px 0px 20px 0px;
-    width: 60%;
-    align-self: center;
-    height: auto;
-    text-align: center; }
-  /* Main Sucursales */
-  #mapaDistribuidora iframe {
-    width: 100%; }
-  #textoDistribuidora p {
-    width: 100%; }
-  #mapaFerreteria iframe {
-    width: 100%; }
-  #textoFerreteria p {
-    width: 100%; }
-  /* Main Contacto */
-  #mainContacto {
-    grid-area: mainContacto;
-    display: grid;
-    grid-template-areas: "infoContacto infoContacto" "formContacto formContacto";
-    justify-content: center;
-    width: 100%;
-    height: auto; }
-  .containerContacto {
-    margin-right: 640px;
-    margin-top: 10px;
-    height: auto; }
-  .containerFormulario {
-    justify-self: center;
-    margin-right: 10%; }
-  /* footer */
-  footer div div h6 {
-    font-size: 10px; }
-  .mainContactoMobile {
-    display: none; } }
-
-/*             MEDIAQUERIES CELULAR             */
-@media screen and (max-width: 480px) and (min-width: 320px) {
-  /* Banner */
-  header .logo {
-    height: 68px; }
-  /* Main Productos */
-  .mainProductos {
-    justify-content: center;
-    flex-direction: column;
-    margin: 20px 0px 20px 0px;
-    height: auto; }
-  #archivoProductos {
-    margin: 0px 0px 0px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 150px; }
-  #textoProductos {
-    margin: 0px 0px 40px 0px;
-    width: 70%;
-    align-self: center;
-    margin-top: 10px; }
-  main div h2 {
-    font-size: 18px; }
-  main div p {
-    font-size: 12px; }
-  #imagenProductos {
-    margin: 0px 0px 0px 0px;
-    height: 150px;
-    width: 300px;
-    align-self: center; }
-  #archivoImagen {
-    transform: scale(0.5); }
-  /* Main Sucursales */
+    align-items: center; }
+    .mainEmpresa #imagenEmpresa {
+      height: 220px;
+      width: 70%;
+      margin-bottom: 15px; }
+    .mainEmpresa .containerEmpresa {
+      width: 70%; }
+  /* main sucursales */
   .mainSucursales {
-    grid-template-areas: "tituloSucursales tituloSucursales" "subtituloDistribuidora subtituloDistribuidora" "mapaDistribuidora mapaDistribuidora" "textoDistribuidora textoDistribuidora" "subtituloFerreteria subtituloFerreteria" "mapaFerreteria mapaFerreteria" "textoFerreteria textoFerreteria";
-    gap: 25px 0px;
-    height: auto; }
-  #mapaDistribuidora {
-    justify-self: center;
-    width: 100%; }
-    #mapaDistribuidora iframe {
-      width: 100%; }
-  #textoDistribuidora {
-    justify-self: center;
-    width: 100%; }
-    #textoDistribuidora p {
-      width: 100%; }
-  #mapaFerreteria {
-    justify-self: center;
-    width: 100%; }
-    #mapaFerreteria iframe {
-      width: 100%; }
-  #textoFerreteria {
-    justify-self: center;
-    width: 100%; }
-    #textoFerreteria p {
-      width: 100%; }
-  /* Main Empresa */
-  #mainEmpresa {
-    flex-direction: column-reverse; }
-  #imagenEmpresa {
-    padding: 20px;
-    width: 340px;
-    margin-left: 30px; }
-  .containerEmpresa {
-    width: 300px;
-    padding: 20px; }
-  /* Main Contacto */
+    height: auto;
+    grid-template-areas: "tituloSucursales tituloSucursales" "mapaDistribuidora mapaDistribuidora" "textoDistribuidora textoDistribuidora" "mapaFerreteria mapaFerreteria" "textoFerreteria textoFerreteria"; }
+    .mainSucursales .subtituloDistribuidora, .mainSucursales .subtituloFerreteria {
+      display: none; }
+    .mainSucursales #textoFerreteria {
+      padding-left: 0em; }
+    .mainSucursales #textoDistribuidora {
+      padding-right: 0em; }
+    .mainSucursales #mapaFerreteria, .mainSucursales #mapaDistribuidora {
+      width: 100%;
+      display: flex;
+      justify-content: center; }
   #mainContacto {
-    display: none; }
-  .mainContactoMobile {
-    grid-area: mainContacto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
-    margin-top: 40px;
-    padding: 10px;
-    font-family: 'Roboto', sans-serif; }
-  /* Footer */
-  footer {
-    height: 120px; } }
+    height: auto;
+    grid-template-areas: "tituloContacto tituloContacto" "infoContacto infoContacto" "formContacto formContacto"; }
+    #mainContacto .containerContacto {
+      margin-left: 0em;
+      width: 100%;
+      padding-left: 20px;
+      padding-right: 20px; }
+    #mainContacto .containerFormulario {
+      margin-left: 0em;
+      margin-top: 1em;
+      width: 85%;
+      justify-self: center; }
+      #mainContacto .containerFormulario #areaEmail {
+        width: 100%; }
+      #mainContacto .containerFormulario #areaTelefono {
+        width: 100%; }
+      #mainContacto .containerFormulario #areaMensaje {
+        width: 100%; } }
