--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -1,3 +1,154 @@
+/* MEDIAQUERIES TABLET-NOTEBOOK */
+@media screen and (min-width: map-get($map: $breakpoints, $key: 'medium')) and (max-width: map-get($map: $breakpoints, $key: 'large')){
+  /* header */
+header{
+  .logo{
+    height: 150px;
+  }
+}
+/* main empresa */
+.mainEmpresa{
+  flex-direction: column;
+  align-items: center;
+  #imagenEmpresa{
+    margin-bottom: 15px;
+  }
+  .containerEmpresa{
+    width: 70%;
+  }
+}
+/* main sucursales */
+.mainSucursales{
+  height: auto;
+  grid-template-areas: "tituloSucursales tituloSucursales"
+                       "mapaDistribuidora mapaDistribuidora"
+                       "textoDistribuidora textoDistribuidora"
+                       "mapaFerreteria mapaFerreteria"
+                       "textoFerreteria textoFerreteria";
+  .subtituloDistribuidora, .subtituloFerreteria{
+    display: none;
+  }
+  #textoFerreteria{
+    padding-left: 0em;
+  }
+  #textoDistribuidora{
+    padding-right: 0em;
+  }
+  #mapaFerreteria, #mapaDistribuidora{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+ }
+ /* main contacto */
+ #mainContacto{
+   width: 100%;
+   height: auto;
+   grid-template-areas: "tituloContacto tituloContacto"
+                        "infoContacto infoContacto"
+                        "formContacto formContacto";
+  .containerContacto{
+    margin-left: 0em;
+    width: 70%;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-self: center;
+    margin-bottom: 20px;
+  }
+  .containerFormulario{
+    margin-left: 0em;
+    margin-top: 1em;
+    width: 70%;
+    justify-self: center;
+    #areaEmail{
+      width: 100%;
+    }
+    #areaTelefono{
+      width: 100%;
+    }
+    #areaMensaje{
+      width: 100%;
+    }
+  }
+ }  
+
+}
+
+/* MEDIAQUERIES TABLET */
+@media screen and (min-width: map-get($map: $breakpoints, $key: 'small')) and (max-width: map-get($map: $breakpoints, $key: 'medium')){
+/* header */
+header{
+  .logo{
+    height: 100px;
+  }
+}
+/* main empresa */
+.mainEmpresa{
+  flex-direction: column;
+  align-items: center;
+  #imagenEmpresa{
+    margin-bottom: 15px;
+  }
+  .containerEmpresa{
+    width: 70%;
+  }
+}
+/* main sucursales */
+.mainSucursales{
+  height: auto;
+  grid-template-areas: "tituloSucursales tituloSucursales"
+                       "mapaDistribuidora mapaDistribuidora"
+                       "textoDistribuidora textoDistribuidora"
+                       "mapaFerreteria mapaFerreteria"
+                       "textoFerreteria textoFerreteria";
+  .subtituloDistribuidora, .subtituloFerreteria{
+    display: none;
+  }
+  #textoFerreteria{
+    padding-left: 0em;
+  }
+  #textoDistribuidora{
+    padding-right: 0em;
+  }
+  #mapaFerreteria, #mapaDistribuidora{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+ }
+ /* main contacto */
+ #mainContacto{
+   width: 100%;
+   height: auto;
+   grid-template-areas: "tituloContacto tituloContacto"
+                        "infoContacto infoContacto"
+                        "formContacto formContacto";
+  .containerContacto{
+    margin-left: 0em;
+    width: 70%;
+    padding-left: 30px;
+    padding-right: 30px;
+    justify-self: center;
+    margin-bottom: 20px;
+  }
+  .containerFormulario{
+    margin-left: 0em;
+    margin-top: 1em;
+    width: 70%;
+    justify-self: center;
+    #areaEmail{
+      width: 100%;
+    }
+    #areaTelefono{
+      width: 100%;
+    }
+    #areaMensaje{
+      width: 100%;
+    }
+  }
+ }  
+}
+
 /* MEDIAQUERIES CELULAR */
 @media screen and (min-width: map-get($map: $breakpoints, $key: 'xs')) and (max-width: map-get($map: $breakpoints, $key: 'small')){
   /* header */
@@ -51,8 +202,8 @@
     .containerContacto{
       margin-left: 0em;
       width: 100%;
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 30px;
+      padding-right: 30px;
     }
     .containerFormulario{
       margin-left: 0em;
